// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`titresDREAL > teste la récupération des données pour les DREAL 1`] = `
{
  "activitesAbsentes": 0,
  "activitesEnConstruction": 0,
  "derniereEtape": {
    "date": "2022-03-10",
    "etapeStatutId": "com",
    "etapeTypeId": "mcp",
  },
  "enAttenteDeDREAL": false,
  "id": Any<String>,
  "nom": "titre1",
  "prochainesEtapes": [
    "vfd",
    "mod",
  ],
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titre_statut_id": "mod",
  "titulaires": [
    {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
  "type_id": "arm",
}
`;

exports[`titresDREAL > teste la récupération des données pour les DREAL 2`] = `
{
  "activitesAbsentes": 0,
  "activitesEnConstruction": 0,
  "derniereEtape": {
    "date": "2022-02-10",
    "etapeStatutId": "fai",
    "etapeTypeId": "pfd",
  },
  "enAttenteDeDREAL": false,
  "id": Any<String>,
  "nom": "titre2",
  "prochainesEtapes": [
    "mcp",
    "mod",
  ],
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titre_statut_id": "mod",
  "titulaires": [
    {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
  "type_id": "arm",
}
`;

exports[`titresONF > teste la récupération des données pour l'ONF 1`] = `
{
  "dateCARM": "",
  "dateCompletudePTMG": "2022-03-10",
  "dateReceptionONF": "",
  "enAttenteDeONF": true,
  "id": Any<String>,
  "nom": "titre1",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titre_statut_id": "mod",
  "titulaires": [
    {
      "nom": "Mon Entreprise",
    },
  ],
  "type_id": "arm",
}
`;

exports[`titresONF > teste la récupération des données pour l'ONF 2`] = `
{
  "dateCARM": "",
  "dateCompletudePTMG": "",
  "dateReceptionONF": "",
  "enAttenteDeONF": false,
  "id": Any<String>,
  "nom": "titre2",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titre_statut_id": "mod",
  "titulaires": [
    {
      "nom": "Mon Entreprise",
    },
  ],
  "type_id": "arm",
}
`;

exports[`titresPTMG > teste la récupération des données pour le PTMG 1`] = `
{
  "enAttenteDePTMG": false,
  "id": Any<String>,
  "nom": "titre1",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titre_statut_id": "mod",
  "titulaires": [
    {
      "nom": "Mon Entreprise",
    },
  ],
  "type_id": "arm",
}
`;

exports[`titresPTMG > teste la récupération des données pour le PTMG 2`] = `
{
  "enAttenteDePTMG": true,
  "id": Any<String>,
  "nom": "titre2",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titre_statut_id": "mod",
  "titulaires": [
    {
      "nom": "Mon Entreprise",
    },
  ],
  "type_id": "arm",
}
`;
